fix scrollbar

--- a/client/src/Styles/Home.css
+++ b/client/src/Styles/Home.css
@@ -19,11 +19,28 @@
   background-color: var(--secondary-color);
 }
 
+.moviesContainer::-webkit-scrollbar-track {
+  background: #474747;
+  height: 4px;
+}
+
+.moviesContainer::-webkit-scrollbar-thumb:hover {
+  background: var(--tertiary-color);
+}
+
 .container2::-webkit-scrollbar {
   height: 3px;
 }
 .container2::-webkit-scrollbar-thumb {
-  background-color: var(--primary-color);
+  background: var(--tertiary-color);
+}
+
+.container2::-webkit-scrollbar-track {
+  background-color: #474747;
+}
+
+.container2::-webkit-scrollbar-thumb:hover {
+  background: var(--primary-color);
 }
 
 .firstSection {
